# styletts-api

./: .gitignore  .gitmodules  README.md  pyproject.toml  test.py
styletts_api/inference/: generate.py  load.py
styletts_api/training/: train.py
