[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styletts-api"
version = "1.0"
dependencies = [
]
requires-python = ">=3.9"
authors = [
  {name = "Jarod Mica"}
]
maintainers = [
  {name = "Jarod Mica"}
]
description = "API for StyleTTS2 inference"
readme = "README.md"
license = {file = "LICENSE"}

[tool.hatch.build]
include = ["styletts_api"]

[project.urls]
Homepage = "https://github.com/JarodMica/styletts-api"
Repository = "https://github.com/JarodMica/styletts-api"
